# ffortier.github.io

./: .bazelignore  .bazelrc  .gitignore  .pnpmfile.cjs  BUILD.bazel  Cargo.toml  MODULE.bazel  Makefile  README.md  WORKSPACE  cargo-bazel-lock.json  debug.gdb  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rtest.c  rust-project.json  shell.nix  site_deploy.sh
.github/workflows/: ci.yml  renovate.yml  site.yml
bazelrc/: uxn.bazelrc
experiments/os/: BUILD.bazel  README.md  cargo-bazel-lock.json
experiments/os/boot/: BUILD.bazel
experiments/os/builtins/: BUILD.bazel  _Unwind_Resume.c  memcpy.c
experiments/os/kernel/: BUILD.bazel  Cargo.toml  kernel.asm  kernel.rs  linker.ld  main.rs
experiments/os/kernel/core/: BUILD.bazel  allocator.rs  config.rs  console.rs  idt.rs  lib.rs
experiments/os/kernel/i686/: BUILD.bazel  idt.asm  io.asm  kernel.asm
experiments/transpiler/: BUILD.bazel  Cargo.toml  lib.rs
experiments/transpiler/examples/: BUILD.bazel  bubble8.s
experiments/transpiler/grammars/: BUILD.bazel  ca65.pest
extensions/: sysroots.bzl
jasm/binary/: BUILD.bazel
juxn/: BUILD.bazel
os/: BUILD.bazel  bundle.py  config.bzl
os/boot/: BUILD.bazel  boot.asm
os/builtins/: BUILD.bazel  memcmp.c  memset.c
os/fs/: BUILD.bazel
os/kernel/: BUILD.bazel
os/kernel/core/: BUILD.bazel  config.rs  console.rs  error.rs  idt.rs  io.rs  lib.rs  paging.rs
os/kernel/core/fs/: file.rs  path.rs
os/kernel/i686/: BUILD.bazel
programs/blank/: Makefile
programs/blank/src/: blank.asm  blank.c  linker.ld
programs/shell/src/: shell.c  shell.h
programs/stdlib/: Makefile
programs/stdlib/src/: peachos.asm  peachos.c  peachos.h  start.asm  stdio.h  stdlib.c  string.c
ray/: BUILD.bazel  common.c  common.h  include_bin.py  main.c  map.c  map.h  map.txt  player.c  player.h
rpm/: BUILD.bazel  Cargo.toml
rules_scratch/: .bazelignore  .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
rules_scratch/examples/hello/: BUILD.bazel  Player.json  Stage.json
rules_scratch/scratch/: defs.bzl  repositories.bzl  toolchains.bzl
rules_scratch/scratch/private/: providers.bzl  scratch_binary.bzl  scratch_extension.bzl  scratch_library.bzl  scratch_sprite.bzl  scratch_stage.bzl
rules_scratch/tools/sb3c/: BUILD.bazel  main.js  package.json
see/: BUILD.bazel  README.md  cli.c  cli.h  da.h  io.c  io.h  mem.h
site/: BUILD.bazel  README.md  astro.config.mjs  deploy.sh  index.html  package.json
site/src/content/docs/: index.mdx
site/src/pages/: index.astro
src/: config.h  kernel.c  kernel.h  status.h  status_test.c  testsupport.h
src/disk/: streamer.c
src/fs/: file.c  file.h
src/fs/fat/: fat16.c  fat16_test.c
src/idt/: idt.asm  idt.c  idt.h
src/io/: io.h
src/isr80h/: isr80h.c  isr80h.h  misc.c  misc.h  process.c  process.h
src/keyboard/: classic.c  classic.h  keyboard.c
src/loader/formats/: elf.h  elfloader.c  elfloader.h
src/memory/: memory.c  memory.h
src/memory/heap/: heap_test.c
src/memory/paging/: paging.c  paging.h
src/string/: string.c  string.h  string_test.c
src/task/: process.c  process.h  task.c  task.h  task_test.c
tools/java/: BUILD.bazel  defs.bzl
tools/nasm/: BUILD.bazel  defs.bzl  nasm_darwin
tools/rbe/: BUILD.bazel
tools/transitions/: defs.bzl
tools/transitions/private/: with_extra_toolchains.bzl
tools/uxn/: BUILD.bazel  MODULE.bazel  defs.bzl  extension.bzl  toolchain.bzl
tools/uxn5/: defs.bzl
tools/wasm/: defs.bzl
transpiler/: BUILD.bazel  Cargo.toml  main.rs
transpiler/examples/: BUILD.bazel
transpiler/grammars/: BUILD.bazel
trex/: cargo-bazel-lock.json
trex/cli/: BUILD.bazel  Cargo.toml
trex/parser/: BUILD.bazel  Cargo.toml
udemy/dsp/: BUILD.bazel  README.md  defs.bzl
udemy/dsp/convolution/: BUILD.bazel  convolution.c  convolution.h  main.c
udemy/dsp/fourier_transform/: BUILD.bazel  dft.c  dft.h  main.c
udemy/dsp/polar/: BUILD.bazel  main.c
udemy/dsp/signal_stats/: BUILD.bazel  main.c  signal_stats.c  signal_stats.h  waveforms.c
udemy/dsp/tools/: BUILD.bazel  da.h  io.c  io.h  io_test.c
udemy/peachos/: debug.gdb  make.sh
udemy/peachos/disk/some/dir/: hi.txt
udemy/peachos/programs/blank/: Makefile
udemy/peachos/programs/shell/: Makefile
udemy/peachos/programs/stdlib/src/: memory.c  memory.h  peachos.h  start.c  stdio.c  stdlib.c  stdlib.h  string.c  string.h
udemy/peachos/programs/stdlib/tests/: stdlib_test.c
udemy/peachos/src/: config.h  kernel.asm  kernel.c  kernel.h
udemy/peachos/src/boot/: boot.asm
udemy/peachos/src/disk/: disk.c  disk.h  streamer.h
udemy/peachos/src/fs/: file.h  pparser.c  pparser.h  pparser_test.c
udemy/peachos/src/fs/fat/: fat16.c  fat16.h  fat16_test.c
udemy/peachos/src/gdt/: gdt.c  gdt.h
udemy/peachos/src/idt/: idt.asm  idt.c  idt.h
udemy/peachos/src/io/: io.c
udemy/peachos/src/isr80h/: heap.c  heap.h  isr80h.c  misc.h  process.c
udemy/peachos/src/keyboard/: classic.h  keyboard.h
udemy/peachos/src/loader/formats/: elfloader.c
udemy/peachos/src/memory/: memory.h
udemy/peachos/src/memory/heap/: heap.c  kheap.c
udemy/peachos/src/string/: string.c  string.h  string_test.c
udemy/peachos/src/task/: process.c  process.h  task.asm  task.c  task_test.c
uxn/: BUILD.bazel  app.js  hello.html  package.json
