load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

sh_binary(
    name = "site_deploy",
    srcs = ["site_deploy.sh"],
    data = ["//site"],
)

genrule(
    name = "dummy_sh",
    outs = ["dummy.sh"],
    cmd = "touch $@",
)

sh_test(
    name = "dummy",
    srcs = [":dummy_sh"],
)
