bazel_dep(name = "aspect_rules_js", version = "1.35.0")

bazel_dep(name = "rules_nodejs", version = "6.0.3")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")

bazel_dep(name = "aspect_bazel_lib", version = "2.3.0")

sysroots = use_extension("//extensions:sysroots.bzl", "sysroots")
sysroots.install(
    targets = [
        "bullseye_amd64",
        "bullseye_arm64",
        "bullseye_i386",
    ],
)
use_repo(sysroots, "sysroots_bullseye_amd64", "sysroots_bullseye_arm64", "sysroots_bullseye_i386")
