bazel_dep(name = "aspect_rules_py", version = "0.5.0")
bazel_dep(name = "rules_python", version = "0.29.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)
use_repo(python, "python_3_11")

register_toolchains(
    "@python_3_11//:all",
)

bazel_dep(name = "aspect_rules_js", version = "1.38.0")

bazel_dep(name = "rules_nodejs", version = "6.0.3")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")

bazel_dep(name = "aspect_bazel_lib", version = "2.4.2")

sysroots = use_extension("//extensions:sysroots.bzl", "sysroots")
sysroots.install(
    targets = [
        "bullseye_amd64",
        "bullseye_arm64",
        "bullseye_i386",
    ],
)
use_repo(sysroots, "sysroots_bullseye_amd64", "sysroots_bullseye_arm64", "sysroots_bullseye_i386")

bazel_dep(name = "rules_java", version = "7.4.0")
bazel_dep(name = "rules_jvm_external", version = "6.0")
bazel_dep(name = "contrib_rules_jvm", version = "0.24.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "org.ow2.asm:asm:9.6",
        "org.ow2.asm:asm-util:9.6",
        "io.soabase.record-builder:record-builder-processor:40",
        "io.soabase.record-builder:record-builder-core:40",
        "org.junit.jupiter:junit-jupiter-api:5.10.2",
        "org.junit.jupiter:junit-jupiter-engine:5.10.2",
        "org.junit.platform:junit-platform-launcher:1.10.2",
        "org.junit.platform:junit-platform-reporting:1.10.2",
        "org.assertj:assertj-core:3.25.3",
    ],
    fetch_javadoc = True,
    fetch_sources = True,
    lock_file = "//third_party/java:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)

use_repo(maven, "maven", "unpinned_maven")
