load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "kernel",
    srcs = ["main.rs"],
    linker_script = "linker.ld",
    platform = "@toolchains_llvm//platforms:linux-x86_32",
    rustc_flags = [
        "-Cpanic=abort",
        "-Clink-arg=-nostdlib",
        "-Clink-arg=-fno-builtin",
        "-Clink-arg=-ffreestanding",
        "-Clink-arg=-Wl,--oformat=binary",
        "-Copt-level=0",
    ],
    tags = ["manual"],
    visibility = ["//os:__pkg__"],
    deps = [
        "//os/builtins",
        "//os/kernel/core",
        "//os/kernel/i686",
    ],
)
