load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "kernel_x86",
    srcs = ["main.rs"],
    linker_script = "linker.ld",
    platform = "@toolchains_llvm//platforms:linux-x86_32",
    rustc_flags = [
        "-Cpanic=abort",
        "-Clink-arg=-nostdlib",
        "-Clink-arg=-fno-builtin",
        "-Clink-arg=-ffreestanding",
        "-Clink-arg=-Wl,--oformat=binary",
        "-Copt-level=0",
    ],
    deps = [
        "//os/builtins",
        "//os/kernel/core",
        "//os/kernel/i686",
    ],
)

alias(
    name = "x86",
    actual = "kernel_x86",
    visibility = ["//os:__pkg__"],
)
