load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
load("@bazel_skylib//rules:select_file.bzl", "select_file")
load("@rules_rust//rust:defs.bzl", "rust_library")

genrule(
    name = "kernel_o",
    srcs = ["kernel.asm"],
    outs = ["kernel.o"],
    cmd = "$(execpath @nasm//:bin/nasm) -f elf $< -o $@",
    tools = ["@nasm//:bin/nasm"],
)

rust_library(
    name = "kernel_rs",
    srcs=["kernel.rs"],
    tags =["manual"],
)

cc_binary(
    name = "kernel_full",
    srcs = [
        ":kernel_o",
    ],
    #deps = [
    #    ":kernel_rs",
    #],
    additional_linker_inputs = [
        "linker.ld",
    ],
    linkopts = [
        "-T $(rootpath linker.ld)",
        "-Wl,--oformat=binary",
        "-ffreestanding",
        "-fno-builtin",
        "-nostdlib",
    ],
    tags = ["manual"],
)

platform_transition_binary(
    name = "kernel_i386",
    binary = ":kernel_full",
    target_platform = "@toolchains_llvm//platforms:linux-x86_32",
)

select_file(
    name = "kernel",
    srcs = ":kernel_i386",
    subpath = "kernel_i386/kernel_full",
    visibility = ["//experiments/os:__pkg__"],
)
