load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "kernel",
    srcs = ["main.rs"],
    linker_script = "linker.ld",
    platform = "@toolchains_llvm//platforms:linux-x86_32",
    rustc_flags = [
        "-Cpanic=abort",
        "-Clink-arg=-nostdlib",
        "-Clink-arg=-fno-builtin",
        "-Clink-arg=-ffreestanding",
        "-Clink-arg=-Wl,--oformat=binary",
        "-Copt-level=0",
    ],
    tags = ["manual"],
    visibility = ["//experiments/os:__pkg__"],
    deps = [
        "//experiments/os/builtins",
        "//experiments/os/kernel/core",
        "//experiments/os/kernel/i686",
    ],
)
