load("@rules_cc//cc:defs.bzl", "cc_library")
load("//tools/nasm:defs.bzl", "nasm_library")

[
    nasm_library(
        name = file.replace(".", "_") + "_o",
        srcs = [file],
        out = file + ".o",
    )
    for file in glob(["*.asm"])
]

cc_library(
    name = "i686",
    srcs = [
        ":" + file.replace(".", "_") + "_o"
        for file in glob(["*.asm"])
    ],
    linkstatic = True,
    tags = ["manual"],
    visibility = ["//os/kernel:__pkg__"],
)
